<resources>
    <string name="app_name">DSA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginForm">Login Form</string>
    <string name="userName">UserName</string>
    <string name="enterUserName">Enter your UserName</string>
    <string name="password">Password</string>
    <string name="enterPassword">Enter your Password</string>
    <string name="login">LogIn</string>
    <string name="loginHere">LogIn here!</string>
    <string name="register">Register</string>
    <string name="registerHere">Register here!</string>
    <string name="registerForm">Register Form</string>
    <string name="enterEmail">Enter your Email</string>
    <string name="email">Email Address</string>
    <string name="name">Full Name</string>
    <string name="enterFullName">Enter your Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="enterPhoneNumber">Enter your Phone Number</string>
    <string name="gender">Gender</string>
    <string name="select_your_address_on_map">Select your Address on map</string>
    <string name="title_activity_profile" />
    <string name="hello_first_fragment">hello first segment</string>
    <string name="next">next</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirmPassword">Confirm Password</string>


</resources>
