<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:stretchColumns="1">
    <TableRow android:padding="5dip">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:text="@string/loginForm"
            android:textColor="#00008B"
            android:textSize="25sp"
            android:textStyle="bold" />
    </TableRow>
    <TableRow>
        <LinearLayout
            android:orientation="vertical"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/userName"
                android:textColor="#00008B"
                android:textSize="16sp"
                android:layout_width="match_parent" />

            <EditText
                android:id="@+id/userName"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:background="#fff"
                android:hint="@string/enterUserName"
                android:padding="5dp"
                android:textColor="#000"
                android:layout_width="375dp"/>
        </LinearLayout>
    </TableRow>
    <TableRow>
        <LinearLayout
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="#00008B"
                android:textSize="16sp"
                android:layout_width="match_parent" />

            <EditText
                android:id="@+id/password"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:background="#fff"
                android:hint="@string/enterPassword"
                android:padding="5dp"
                android:textColor="#000"
                android:layout_width="375dp"/>
        </LinearLayout>


    </TableRow>
    <TableRow android:layout_marginTop="20dp">

        <Button
            android:id="@+id/loginBtn"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:background="#00008B"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>
    <TableRow android:layout_marginTop="20dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/registerHere"
            android:textColor="#00008B"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:onClick="toRegister"/>
    </TableRow>
</TableLayout>
